# AgFileSystemScanner

./: .gitignore  CMakeLists.txt  README.md
docs/: config
src/: CMakeLists.txt  main.cpp
